@@ -120,7 +120,7 @@ public class JavaSafeSuccessMemoizationGenerationTest {
         var output = temporary.newFolder().toPath();
         try (var manager = compiler.getStandardFileManager(diagnostics, null, null)) {
             assertTrue(diagnostics.getDiagnostics().toString(), compiler.getTask(null, manager, diagnostics,
-                List.of("--enable-preview", "--release", "21", "-classpath", System.getProperty("java.class.path"),
+                List.of("--release", "17", "-classpath", System.getProperty("java.class.path"),
                     "-d", output.toString()), null, units).call());
         }
         try (var loader = new URLClassLoader(new URL[]{output.toUri().toURL()}, getClass().getClassLoader())) {
