@@ -210,7 +210,7 @@ public class TinyStringTokenConformanceTest {
         String classpath = System.getProperty("java.class.path") + File.pathSeparator + tinyClasses;
         try (var manager = compiler.getStandardFileManager(diagnostics, Locale.ROOT, StandardCharsets.UTF_8)) {
             boolean compiled = compiler.getTask(null, manager, diagnostics,
-                List.of("--enable-preview", "--release", "21", "-classpath", classpath, "-d", output.toString()),
+                List.of("--release", "17", "-classpath", classpath, "-d", output.toString()),
                 null, units).call();
             assertTrue(diagnostics.getDiagnostics().toString(), compiled);
         }
