@@ -41,7 +41,7 @@ public class ZeroWidthSourceRuntimeTest {
         var output = temporary.newFolder().toPath();
         try (var manager = compiler.getStandardFileManager(diagnostics, Locale.ROOT, StandardCharsets.UTF_8)) {
             assertTrue(diagnostics.getDiagnostics().toString(), compiler.getTask(null, manager, diagnostics,
-                List.of("--enable-preview", "--release", "21", "-classpath", System.getProperty("java.class.path"),
+                List.of("--release", "17", "-classpath", System.getProperty("java.class.path"),
                     "-d", output.toString()), null, units).call());
         }
         return new URLClassLoader(new URL[]{output.toUri().toURL()}, getClass().getClassLoader());
